force-app/main/default/objects/QL_Template_Change__c/QL_Template_Change__c.object-meta.xml
<CustomObject>
    <description>CRM-5832 This object stores the check point of QUIP template change.</description>
    <label>QL Template Change</label>
    <nameField>
        <displayFormat>QT-{0000}</displayFormat>
        <label>QL Template Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QL Template Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>