force-app/main/default/objects/QL_Template_Change__c/fields/Flow_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Flow_Run_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow Run Date</label>
    <type>Date</type>
</CustomField>