force-app/main/default/objects/QL_Template_Change__c/fields/QL_Is_Template_Changed__c.field-meta.xml
<CustomField>
    <fullName>QL_Is_Template_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-5832 This field stores if the template is changed or not.</description>
    <label>Is Template Changed</label>
    <type>Checkbox</type>
</CustomField>