force-app/main/default/objects/QL_Template_Change__c/fields/QL_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>QL_Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow Run Date</fullName>
            </value>
            <value>
                <fullName>Template Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>